@startuml
class AddFlashcardCommand {
  - String question
  - String answer
  + execute(flashcards, storage)
}

class Flashcard {
  - String question
  - String answer
  + toSaveFormat()
}

class FlashcardList {
  + addFlashcard(flashcard)
}

class Storage {
  + writeToFile(flashcards)
}

AddFlashcardCommand --> Flashcard
AddFlashcardCommand --> FlashcardList
AddFlashcardCommand --> Storage
@enduml